# mini_thriftme

./: CMakeLists.txt  Makefile
proto/: vehicle.thrift
src/broker/: ServiceBroker.cpp  ServiceBroker.hpp
src/client/: main.cpp  thrift_client.cpp
src/common/: RpcMessage.hpp  RpcResponse.hpp
src/server/: main.cpp  thrift_server.cpp
src/services/: VehicleService.cpp  VehicleService.hpp
src/transport/: TcpClient.cpp  TcpClient.hpp  TcpServer.cpp  TcpServer.hpp
